# jira-mcp

./: .gitignore  AGENTS.md  CONFIGURATION.md  README.md  REVIEW.md  pyproject.toml
docs/: implementation.md
jira_mcp/: __init__.py  __main__.py  config.py  issue_manager.py  jira_client.py  mcp_server.py  oauth2_handler.py  server.py  utils.py  workspace_manager.py
scripts/: oauth_setup.py
